--- a/views/components/index.pug
+++ b/views/components/index.pug
@@ -30,5 +30,5 @@ html(lang='en' data-bs-theme='dark')
             aria-labelledby=`${page.name}-tab`)
     script(src='dist/htmx.org/dist/htmx.js')
     script(src='dist/htmx.org/dist/ext/ws.js')
-    script(src='dist/bootstrap/dist/js/bootstrap.bundle.min.js')
-    script(src='main.js')
+    script(src='dist/bootstrap/dist/js/bootstrap.bundle.min.js' async)
+    script(src='main.js' async)
