--- a/views/controls/jsonator/index.pug
+++ b/views/controls/jsonator/index.pug
@@ -41,20 +41,37 @@ mixin renderfield(value,caption,options)
 
 mixin renderarray(data,options)
     - const columns=data[1].reduce((cols,cur)=>cols.concat(Object.keys(cur).filter(col=>!cols.includes(col))),[])
+    script.
+        function sortTable(th,idx) {
+            function compareValue(a,b) {
+                if ((isNaN(a) === isNaN(b)) && isNaN(a)){
+                    return a.localeCompare(b);
+                } else {
+                    return a-b;
+                }
+            }
+            const tbody = th.parentNode.parentNode.parentElement.querySelector("tbody");
+            th.sorted = !th.sorted;
+            Array.from(tbody.childNodes)
+                 .sort((a,b)=>compareValue(a.children[idx].innerText,b.children[idx].innerText) * (th.sorted ? 1 : -1))
+                 .forEach(row=>tbody.appendChild(row))
+        }
     div.container-fluid(style="padding-top: 5px;")
-        table#table(class='table table-striped table-dark table-hover caption-top table-sm table-striped table-bordered' data-toggle="table" data-sortable="true")
+        table.table(class='table-striped table-dark table-hover caption-top table-sm table-striped table-bordered'
+                    data-toggle="table" 
+                    data-sortable="true")
             thead
                 tr
-                    each column in columns
-                        th.text-secondary(scope="col" data-sortable="true")=column
+                    each column,idx in columns
+                        th.text-secondary(scope="col" data-sortable="true" role="button" onClick="sortTable(event.target,"+(idx+1)+")")=column
             tbody
-            each row,idx in data[1]
-                tr
-                    - var path = `${options.path}[${idx}]`;
-                    form(ws-send=options.path name=options.path)
-                        each column in columns
-                            td
-                                +jsonator([column,row[column]],undefined,{...options,path:`${path}/${column}`,expand:true,plaintext:true})
+                each row,idx in data[1]
+                    tr
+                        - var path = `${options.path}[${idx}]`;
+                        form(ws-send=options.path name=options.path)
+                            each column in columns
+                                td
+                                    +jsonator([column,row[column]],undefined,{...options,path:`${path}/${column}`,expand:true,plaintext:true})
 
 mixin jsonator(data,caption,options)
     - const uuid = ()=>([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g,a=>(a^Math.random()*16>>a/4).toString(16))
